applications/app-k8s/api-gateway/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: api-gateway
        image: ghcr.io/stefanfilkov/petclinic/api-gateway:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: "api-gateway"
  selector:
    app: api-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/server-tokens: "false"
    nginx.ingress.kubernetes.io/fail-timeout: "45s"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-gateway.domashno.party
      secretName: wild-tinqin-prp-be-ys-net
  rules:
    - host: api-gateway.domashno.party
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
